<resources>
    <string name="app_name">OWA_App</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="onderwerp">Onderwerp</string>
    <string name="sender">Sender</string>
    <string name="date">Date</string>
    <string name="message">Message</string>
    <string name="back">Back</string>
    <string name="receiver">Receiver</string>
    <string name="make_mail">Make new mail</string>
    <string name="send_mail">Send mail</string>
    <string name="add_attachment">Add attachment </string>
    <string name="forward_message">Forward Message</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply all</string>

    <string name="delete_mail">Delete</string>


    <string name="naam">Naam</string>
    <string name="mailadres">mailadres</string>
    <string name="comment">Comment</string>
    <string name="mail_inhoud">Mail inhoud</string>
    <string name="send">Send</string>
    <string name="e_mail">E-mail</string>
    <string name="cancel">Cancel</string>


    <string name="bottom_menu_mail">bottom_menu_mail</string>
    <string name="bottom_menu_calendar">bottom_menu_calendar</string>
    <string name="bottom_menu_contacts">bottom_menu_contacts</string>

    <string name="home">Mail</string>
    <string name="bag">Calendar</string>
    <string name="account">Contacts</string>


    <string name="create_mail">Create mail</string>
    <string name="logout">Logout</string>
    <string name="title_activity_calendar">calendar</string>
    <string name="add_event">Add Event</string>
    <string name="list_events">List Events</string>
    <string name="go_to_today">Go to today</string>
    <string name="no_events_yet">No Events Yet</string>
    <string name="subject">Subject</string>
    <string name="beschrijving">Beschrijving</string>
    <string name="date_time_date_time">Date Time - Date Time</string>
    <string name="locatie">Locatie</string>
    <string name="aanwezigen">Aanwezigen</string>
    <string name="save_event">Save Event</string>
    <string name="emailadres">E-mailadres</string>
    <string name="endtime">Endtime</string>
    <string name="enddate">Enddate</string>
    <string name="starttime">Starttime</string>
    <string name="startdate">Startdate</string>
    <string name="aanwezig">Aanwezigen</string>
    <string name="search">Search</string>
    <string name="contactnaam">contactnaam</string>
    <string name="mobile_number">Telefoonnummer</string>
    <string name="bewerken">Bewerken</string>
    <string name="voornaam">Voornaam</string>
    <string name="make_contact">Make contact</string>
    <string name="reply_mail">Reply</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="kalender">Kalender</string>
    <string name="event">Gebeurtenis</string>
    <string name="events">Gebeurtenissen</string>
    <string name="attendees">Aanwezigen:</string>
    <string name="add_attendees">Add Attendees</string>
    <string name="birthday">Geboortedatum</string>
    <string name="postbus">Postbus</string>
    <string name="straat">Straat</string>
    <string name="omgeving">Omgeving</string>
    <string name="plaats">Plaats</string>
    <string name="land">Land/Regio</string>
    <string name="postcode">Postcode</string>
    <string name="status">Status</string>
    <string name="bedrijf">Bedrijf</string>
    <string name="titel">Titel</string>
    <string name="opmerkingen">Opmerkingen</string>
    <string name="staat">Staat</string>
    <string name="provincie">Provincie</string>
    <string name="stad">Stad</string>
    <string name="contacten">Contacten</string>
    <string name="Calender">Kalender</string>

</resources>
