<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="be.ap.edu.owa_app.OpenMailActivity ">

    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_reply_black_24dp"
        android:title="@string/reply"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reply_all"
        android:icon="@drawable/ic_reply_all_black_24dp"
        android:title="@string/send_mail"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_arrow_forward_black_24dp"
        android:title="@string/forward_message"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_mail"
        app:showAsAction="always" />




</menu>

