<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="be.ap.edu.owa_app.Mail.MainActivity">


    <item
        android:id="@+id/action_create_mail"
        android:icon="@drawable/ic_email_black_24dp"
        android:title="@string/create_mail"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_remove_circle_outline_black_24dp"
        android:title="@string/logout"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="always" />



</menu>
