<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <EditText
            android:id="@+id/editname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawableTint="@color/big_dip"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/naam"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/voornaam"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:ems="10"
            android:drawableLeft="@drawable/invisible"
            android:drawablePadding="20dp"
            android:drawableTint="@color/blanced_almond"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/voornaam"/>

        <EditText
            android:id="@+id/editnumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:drawableTint="@color/big_dip"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:inputType="phone" />


        <EditText
            android:id="@+id/editmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawableTint="@color/big_dip"
            android:ems="10"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/emailadres" />


        <EditText
            android:id="@+id/Straat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:drawableTint="@color/big_dip"
            android:ems="10"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/straat" />

        <EditText
            android:id="@+id/Postcode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:backgroundTint="@android:color/transparent"
            android:drawableLeft="@drawable/invisible"
            android:drawablePadding="20dp"
            android:drawableTint="@color/blanced_almond"
            android:ems="10"
            android:hint="@string/postcode"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Stad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:backgroundTint="@android:color/transparent"
            android:drawableLeft="@drawable/invisible"
            android:drawablePadding="20dp"
            android:drawableTint="@color/blanced_almond"
            android:ems="10"
            android:hint="@string/stad" />

        <EditText
            android:id="@+id/staat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:ems="10"
            android:hint="@string/provincie"
            android:drawableLeft="@drawable/invisible"
            android:drawablePadding="20dp"
            android:drawableTint="@color/blanced_almond"
            android:backgroundTint="@android:color/transparent" />

        <EditText
            android:id="@+id/Land"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:ems="10"
            android:hint="@string/land"
            android:drawableLeft="@drawable/invisible"
            android:drawablePadding="20dp"
            android:drawableTint="@color/blanced_almond"
            android:backgroundTint="@android:color/transparent" />

        <TextView
            android:id="@+id/geboortedatum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_date_range_black_24dp"
            android:drawablePadding="20dp"
            android:drawableTint="@color/big_dip"
            android:ems="10"
            android:hint="@string/birthday"
            android:backgroundTint="@android:color/transparent"
            android:textAlignment="textStart"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/Bedrijf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_domain_black_24dp"
            android:drawableTint="@color/big_dip"
            android:ems="10"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/bedrijf" />
        <EditText
            android:id="@+id/Titel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:ems="10"
            android:drawableLeft="@drawable/invisible"
            android:drawablePadding="20dp"
            android:drawableTint="@color/blanced_almond"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/titel"/>

        <EditText
            android:id="@+id/Opmerkingen"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_comment_black_24dp"
            android:drawableTint="@color/big_dip"
            android:ems="10"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/opmerkingen" />
    </LinearLayout>



</ScrollView>
