<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="be.ap.edu.owa_app.Mail.OpenMailActivity">



    <TextView
        android:id="@+id/onderwerp_open"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:editable="false"
        android:text="@string/onderwerp" />

    <TextView
        android:id="@+id/sender_open"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/sender" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/date"
        android:id="@+id/date_open"/>

    <ImageView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_attachment_black_24dp"
        android:padding="15dp"
        android:id="@+id/attachment"
        android:visibility="invisible"
        android:layout_gravity="right"
        android:tint="#000000"
        />

    <EditText
        android:id="@+id/message_open"
        android:layout_width="match_parent"
        android:layout_height="519dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:text="@string/message" />

</LinearLayout>
