<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.ap.edu.owa_app.Contacts.ContactsDetailActivity">

    <ImageView
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:src="@drawable/ic_perm_contact_calendar_black_24dp"
        android:tint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/contactnaam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/contactnaam"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contactnaam"
        android:layout_marginStart="29dp"
        android:layout_marginTop="56dp"
        android:scrollbars="vertical"
        android:src="@drawable/ic_email_black_24dp"
        android:tint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/contactsemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/imageView"
        android:maxLines="1"
        android:text="@string/e_mail"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contactsemail"
        android:layout_marginStart="29dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_phone_android_black_24dp"
        android:tint="@android:color/darker_gray"
        android:id="@+id/phone" />

    <TextView
        android:id="@+id/contactmobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/contactsemail"
        android:layout_alignTop="@+id/phone"
        android:text="@string/mobile_number"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/contactbewerken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp"
        android:text="@string/bewerken" />

    <Button
        android:id="@+id/contactdelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/contactbewerken"
        android:layout_marginBottom="39dp"
        android:text="@string/delete_mail" />



</RelativeLayout>
