<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.ap.edu.owa_app.Contacts.EditContactActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <EditText
        android:id="@+id/editname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:ems="10"
        android:hint="@string/naam"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editfirstname"
        android:layout_alignStart="@+id/phone"
        android:scrollbars="vertical"
        android:src="@drawable/ic_person_black_24dp"
        android:tint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/editfirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editname"
        android:layout_below="@+id/editname"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/voornaam" />

    <EditText
        android:id="@+id/editnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editfirstname"
        android:layout_below="@+id/editfirstname"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone" />

    <ImageView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editmail"
        android:layout_marginEnd="18dp"
        android:layout_toStartOf="@+id/editnumber"
        android:src="@drawable/ic_phone_android_black_24dp"
        android:tint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/editmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editnumber"
        android:layout_marginTop="67dp"
        android:layout_toEndOf="@+id/phone"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/phone"
        android:scrollbars="vertical"
        android:src="@drawable/ic_email_black_24dp"
        android:tint="@android:color/darker_gray" />


</RelativeLayout>
